fixed spacing 👀

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ body {
     justify-content: center;
     text-align: center;
     height: 100vh;
+    padding-top: 5em;
 
 }
 
